# Chat-App/docs/swagger.yaml
@@ -60,10 +60,6 @@ paths:
           description: Токен доступа
           schema:
             $ref: '#/definitions/auth.TokenResponse'
-        "400":
-          description: Неверные данные для входа
-          schema:
-            $ref: '#/definitions/auth.ErrorResponse'
         "401":
           description: Неверные данные для входа
           schema:
